@@ -65,9 +65,7 @@ class MultiGetOperationImpl extends MultiKeyOperationImpl implements
       keys.put(rv, k);
       bkeys.put(rv, KeyUtil.getKeyBytes(k));
       rkeys.put(k, rv);
-      synchronized (vbmap) {
-        vbmap.put(k, new Short((short) 0));
-      }
+      vbmap.put(k, Short.valueOf((short) 0));
     }
     return rv;
   }
